--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,33 +8,42 @@
 }
 
 @inproceedings{1,
+  title={xKV: Cross-Layer SVD for KV-Cache Compression},
+  author={Chi-Chih Chang and Chien-Yu Lin and Yash Akhauri and Wei-Cheng Lin and Kai-Chiang Wu and Luis Ceze and Mohamed S. Abdelfattah},
+  booktitle={},
+  abbr={preprint},
+  year={2025},
+  pdf={https://arxiv.org/pdf/2503.18893},
+}
+
+@inproceedings{2,
   title={Attamba: Attending To Multi-Token States},
-  author={Yash Akhauri and Safeen Huda and Mohamed S. Abdelfattah},
+  author={Yash Akhauri and Ahmed F. AbouElhamayed and Yifei Gao and Chi-Chih Chang and Nilesh Jain and Mohamed S. Abdelfattah},
   booktitle={},
   abbr={preprint},
   year={2025},
   pdf={https://arxiv.org/pdf/2411.17685},
 }
 
-@inproceedings{2,
-  title={xKV: Cross-Layer SVD for KV-Cache Compression},
-  author={Chi-Chih Chang and Chien-Yu Lin and Yash Akhauri and Wei-Cheng Lin and Kai-Chiang Wu and Luis Ceze and Mohamed S. Abdelfattah},
+@inproceedings{3,
+  title={TokenButler: Token Importance is Predictable},
+  author={Yash Akhauri and Safeen Huda and Mohamed S. Abdelfattah},
   booktitle={},
   abbr={preprint},
   year={2025},
-  pdf={https://arxiv.org/abs/2503.18893},
+  pdf={https://arxiv.org/pdf/2503.07518},
 }
 
-@inproceedings{3,
+@inproceedings{4,
   title={SparAMX: Accelerating Compressed LLMs Token Generation on AMX-powered CPUs},
   author={Ahmed F. AbouElhamayed and Jordan Dotzel and Yash Akhauri and Chi-Chih Chang and Sameh Gobriel and J. Pablo Muñoz and Vui Seng Chua and Nilesh Jain and Mohamed S. Abdelfattah},
   booktitle={},
   abbr={preprint},
   year={2025},
-  pdf={https://arxiv.org/abs/2502.12444},
+  pdf={https://arxiv.org/pdf/2502.12444},
 }
 
-@inproceedings{4,
+@inproceedings{5,
   title={Palu: Compressing KV-Cache with Low-Rank Projection},
   author={Chi-Chih Chang and Wei-Cheng Lin and Chien-Yu Lin and Chong-Yan Chen and Yu-Fang Hu and Pei-Shuo Wang and Ning-Chi Huang and Luis Ceze and Mohamed S. Abdelfattah and Kai-Chiang Wu},
   booktitle={International Conference on Learning Representations},
@@ -43,7 +52,7 @@
   pdf={https://arxiv.org/pdf/2407.21118},
 }
 
-@inproceedings{5,
+@inproceedings{6,
   title={BitMoD: Bit-serial Mixture-of-Datatype LLM Acceleration},
   author={Yuzong Chen and Ahmed F. AbouElhamayed and Xilai Dai and Yang Wang and Marta Andronic and George A. Constantinides and Mohamed S. Abdelfattah},
   booktitle={IEEE International Symposium on High-Performance Computer Architecture},
@@ -52,7 +61,7 @@
   pdf={https://arxiv.org/pdf/2411.11745},
 }
 
-@inproceedings{6,
+@inproceedings{7,
   title={ShadowLLM: Predictor-based Contextual Sparsity for Large Language Models},
   author={Yash Akhauri and Ahmed F. AbouElhamayed and Jordan Dotzel and Zhiru Zhang and Alexander M. Rush and Safeen Huda and Mohamed S. Abdelfattah},
   booktitle={Conference on Empirical Methods in Natural Language Processing},
@@ -61,7 +70,7 @@
   pdf={https://arxiv.org/pdf/2406.16635},
 }
 
-@inproceedings{7,
+@inproceedings{8,
   title={BBS: Bi-directional Bit-level Sparsity for Deep Learning Acceleration},
   author={Yuzong Chen and Jian Meng and Jae-sun Seo and Mohamed S. Abdelfattah},
   booktitle={IEEE/ACM International Symposium on Microarchitecture},
@@ -70,7 +79,7 @@
   pdf={https://arxiv.org/pdf/2409.05227},
 }
 
-@inproceedings{8,
+@inproceedings{9,
   title={FLIQS: One-Shot Mixed-Precision Floating-Point and Integer Quantization Search},
   author={Jordan Dotzel and Gang Wu and Andrew Li and Muhammad Umar and Yun Ni and Mohamed S. Abdelfattah and Zhiru Zhang and Liqun Cheng and Martin G. Dixon and Norman P. Jouppi and Quoc V. Le and Sheng Li},
   booktitle={International Conference on Automated Machine Learning},
@@ -80,7 +89,7 @@
   award={Best Paper Award},
 }
 
-@inproceedings{9,
+@inproceedings{10,
   title={Kratos: An FPGA Benchmark for Unrolled DNNs with Fine-Grained Sparsity and Mixed Precision},
   author={Xilai Dai and Yuzong Chen and Mohamed S. Abdelfattah},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -89,7 +98,7 @@
   pdf={https://arxiv.org/pdf/2407.06033},
 }
 
-@inproceedings{10,
+@inproceedings{11,
   title={Encodings for Prediction-based Neural Architecture Search},
   author={Yash Akhauri and Mohamed S. Abdelfattah},
   booktitle={International Conference on Machine Learning},
@@ -98,7 +107,7 @@
   pdf={https://arxiv.org/pdf/2403.02484},
 }
 
-@inproceedings{11,
+@inproceedings{12,
   title={Learning from Students: Applying t-Distributions to Explore Accurate and Efficient Formats for LLMs},
   author={Jordan Dotzel and Yuzong Chen and Bahaa Kotb and Sushma Prasad and Gang Wu and Sheng Li and Mohamed S. Abdelfattah and Zhiru Zhang},
   booktitle={International Conference on Machine Learning},
@@ -107,7 +116,7 @@
   pdf={https://arxiv.org/pdf/2405.03103},
 }
 
-@inproceedings{12,
+@inproceedings{13,
   title={Towards Neural Architecture Search through Hierarchical Generative Modeling},
   author={Lichuan Xiang and Łukasz Dudziak and Mohamed S. Abdelfattah and Abhinav Mehrotra and Nicholas D. Lane and Hongkai Wen},
   booktitle={International Conference on Machine Learning},
@@ -116,7 +125,7 @@
   pdf={https://openreview.net/pdf?id=VdZfEMuoj2},
 }
 
-@inproceedings{13,
+@inproceedings{14,
   title={Beyond Inference: Performance Analysis of DNN Server Overheads for Computer Vision},
   author={Ahmed F. AbouElhamayed and Susanne Balle and Deshanand Singh and Mohamed S. Abdelfattah},
   booktitle={Design Automation Conference},
@@ -125,7 +134,7 @@
   pdf={https://arxiv.org/pdf/2403.12981.pdf},
 }
 
-@inproceedings{14,
+@inproceedings{15,
   title={On Latency Predictors for Neural Architecture Search},
   author={Yash Akhauri and Mohamed S. Abdelfattah},
   booktitle={International Conference on Machine Learning and Systems},
@@ -134,7 +143,7 @@
   pdf={https://arxiv.org/pdf/2403.02446.pdf},
 }
 
-@article{15,
+@article{16,
   title={PQA: Exploring the Potential of Product Quantization in DNN Hardware Acceleration},
   author={Ahmed F. AbouElhamayed and Angela Cui and Javier Fernandez-Marques and Nicholas D. Lane and Mohamed S. Abdelfattah},
   journal={ACM Transactions on Reconfigurable Technology and Systems},
@@ -144,7 +153,7 @@
   award={FCCM'24 Journal Track.},
 }
 
-@inproceedings{16,
+@inproceedings{17,
   title={M4BRAM: Mixed-Precision Matrix-Matrix Multiplication in FPGA Block RAMs},
   author={Yuzong Chen and Jordan Dotzel and Mohamed S. Abdelfattah},
   booktitle={International Conference on Field-Programmable Technology},
@@ -153,7 +162,7 @@
   pdf={https://arxiv.org/pdf/2311.02758.pdf},
 }
 
-@inproceedings{17,
+@inproceedings{18,
   title={DiviML: A Module-based Heuristic for Mapping Neural Networks onto Heterogeneous Platforms},
   author={Yassine Ghannane and Mohamed S. Abdelfattah},
   booktitle={International Conference on Computer-Aided Design},
@@ -162,7 +171,7 @@
   pdf={https://arxiv.org/pdf/2308.00127.pdf},
 }
 
-@inproceedings{18,
+@inproceedings{19,
   title={Multi-Predict: Few Shot Predictors for Efficient Neural Architecture Search},
   author={Yash Akhauri and Mohamed S. Abdelfattah},
   booktitle={International Conference on Automated Machine Learning},
@@ -171,7 +180,7 @@
   pdf={https://arxiv.org/pdf/2306.02459.pdf},
 }
 
-@inproceedings{19,
+@inproceedings{20,
   title={BRAMAC: Compute-in-BRAM Architectures for Multiply-Accumulate on FPGAs},
   author={Yuzong Chen and Mohamed S. Abdelfattah},
   booktitle={International Symposium On Field-Programmable Custom Computing Machines},
@@ -180,7 +189,7 @@
   pdf={https://arxiv.org/pdf/2304.03974.pdf},
 }
 
-@article{20,
+@article{21,
   title={Learned Connectivity Sparsification for LUT-based Neural Networks},
   author={Erwei Wang and Georgios Stavrou and Peter Cheung and George Constantinides and Mohamed S. Abdelfattah and James Davis},
   journal={ACM Transactions on Reconfigurable Technology and Systems},
@@ -189,7 +198,7 @@
   pdf={/assets/pdf/trets23.pdf},
 }
 
-@inproceedings{21,
+@inproceedings{22,
   title={Zero-Cost Operation Scoring in Differentiable Architecture Search},
   author={Lichuan Xiang and Łukasz Dudziak and Mohamed S. Abdelfattah and Thomas Chau and Nicholas D. Lane and Hongkai Wen},
   booktitle={AAAI Conference on Artificial Intelligence},
@@ -198,7 +207,7 @@
   pdf={https://arxiv.org/pdf/2106.06799.pdf},
 }
 
-@inproceedings{22,
+@inproceedings{23,
   title={BLOX: Macro Neural Architecture Search Benchmark and Algorithms},
   author={Thomas Chau and Łukasz Dudziak and Hongkai Wen and Nicholas D. Lane and Mohamed S. Abdelfattah},
   booktitle={Conference on Neural Information Processing Systems},
@@ -207,7 +216,7 @@
   pdf={https://arxiv.org/pdf/2210.07271.pdf},
 }
 
-@inproceedings{23,
+@inproceedings{24,
   title={Adaptable Butterfly Accelerator for Attention-based NNs via Hardware and Algorithm Co-design},
   author={Hongxiang Fan and Thomas Chau and Stylianos Venieris and Royson Lee and Alexandros Kouris and Wayne Luk and Nicholas D. Lane and Mohamed S. Abdelfattah},
   booktitle={IEEE/ACM International Symposium on Microarchitecture},
@@ -216,7 +225,7 @@
   pdf={https://arxiv.org/pdf/2209.09570.pdf},
 }
 
-@inproceedings{24,
+@inproceedings{25,
   title={Zero-Cost Operation Scoring in Differentiable Architecture Search},
   author={Lichuan Xiang and Łukasz Dudziak and Mohamed S. Abdelfattah and Thomas Chau and Nicholas D. Lane and Hongkai Wen},
   booktitle={},
@@ -225,7 +234,7 @@
   pdf={https://arxiv.org/pdf/2106.06799.pdf},
 }
 
-@inproceedings{25,
+@inproceedings{26,
   title={Logic Shrinkage: Learned FPGA Netlist Sparsity for Efficient Neural Network Inference},
   author={Erwei Wang and James Davis and Georgios Stavrou and Peter Cheung and George Constantinides and Mohamed S. Abdelfattah},
   booktitle={International Symposium on Field-Programmable Gate Arrays},
@@ -235,7 +244,7 @@
   award={Nominated for the best paper award.},
 }
 
-@inproceedings{26,
+@inproceedings{27,
   title={Zero-Cost Proxies for Lightweight NAS},
   author={Mohamed S. Abdelfattah and Abhinav Mehrotra and Łukasz Dudziak and Nicholas D. Lane},
   booktitle={International Conference on Learning Representations},
@@ -244,7 +253,7 @@
   pdf={https://openreview.net/pdf?id=0cmMMy8J5q},
 }
 
-@inproceedings{27,
+@inproceedings{28,
   title={NAS-Bench-ASR: Reproducible Neural Architecture Search for Speech Recognition},
   author={Abhinav Mehrotra and Alberto Gil C. P. Ramos and Sourav Bhattacharya and Łukasz Dudziak and Ravichander Vipperla and Thomas Chau and Mohamed S. Abdelfattah and Samin Ishtiaq and Nicholas D. Lane},
   booktitle={International Conference on Learning Representations},
@@ -253,7 +262,7 @@
   pdf={https://openreview.net/pdf?id=CU0APx9LMaL},
 }
 
-@inproceedings{28,
+@inproceedings{29,
   title={Temporal Kernel Consistency for Blind Video Super-Resolution},
   author={Lichuan Chang and Royson Lee and Hongkai Wen and Mohamed S. Abdelfattah and Nicholas D. Lane},
   booktitle={International Conference on Computer Vision Workshops},
@@ -262,7 +271,7 @@
   pdf={https://arxiv.org/pdf/2108.08305.pdf},
 }
 
-@inproceedings{29,
+@inproceedings{30,
   title={BRP-NAS: Prediction-based NAS using GCNs},
   author={Łukasz Dudziak and Thomas Chau and Mohamed S. Abdelfattah and Royson Lee and Hyeji Kim and Nicholas D. Lane},
   booktitle={Conference on Neural Information Processing Systems},
@@ -271,7 +280,7 @@
   pdf={https://arxiv.org/pdf/2007.08668.pdf},
 }
 
-@inproceedings{30,
+@inproceedings{31,
   title={Iterative Compression of End-to-End ASR Model Using Reinforcement learning},
   author={Abhinav Mehrotra and Łukasz Dudziak and Jinsu Yeo and Younyoon Lee and Ravichander Vipperla and Mohamed S. Abdelfattah and Sangjeong Lee and Daehyun Kim and Nicholas D. Lane},
   booktitle={Conference of the International Speech Communication Association},
@@ -280,7 +289,7 @@
   pdf={https://arxiv.org/pdf/2008.02897.pdf},
 }
 
-@inproceedings{31,
+@inproceedings{32,
   title={Journey Towards Tiny Perceptual Super-Resolution},
   author={Royson Lee and Łukasz Dudziak and Mohamed S. Abdelfattah and Hyeji Kim and Stylianos Veneris and Hongkai Wen and Nicholas D. Lane},
   booktitle={European Conference on Computer Vision},
@@ -289,7 +298,7 @@
   pdf={https://arxiv.org/pdf/2007.04356.pdf},
 }
 
-@inproceedings{32,
+@inproceedings{33,
   title={Best of Both Worlds: AutoML Codesign of a CNN and its Hardware Accelerator},
   author={Mohamed S. Abdelfattah and Łukasz Dudziak and Thomas Chau and Royson Lee and Hyeji Kim and Nicholas D. Lane},
   booktitle={Design Automation Conference},
@@ -298,7 +307,7 @@
   pdf={https://arxiv.org/pdf/2002.05022.pdf},
 }
 
-@inproceedings{34,
+@inproceedings{35,
   title={ShrinkML: End-to-End ASR Model Compression Using Reinforcement Learning},
   author={Łukasz Dudziak and Mohamed S. Abdelfattah and Ravichander Vipperla and Stefanos Laskaridis and Nicholas D. Lane},
   booktitle={Conference of the International Speech Communication Association},
@@ -307,7 +316,7 @@
   pdf={https://arxiv.org/pdf/1907.03540.pdf},
 }
 
-@inproceedings{35,
+@inproceedings{36,
   title={DLA: Compiler and FPGA Overlay for Neural Network Inference Acceleration},
   author={Mohamed S. Abdelfattah and David Han and Andrew Bitar and Roberto DiCecco and Shane O’Connell and Nitika Shanker and Joseph Chu and Ian Prins and Joshua Fender and Andrew C. Ling and Gordon R. Chiu},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -316,7 +325,7 @@
   pdf={https://arxiv.org/pdf/1807.06434.pdf},
 }
 
-@inproceedings{36,
+@inproceedings{37,
   title={Harnessing Numerical Flexibility for Deep Learning on FPGAs},
   author={Andrew C. Ling and Mohamed S. Abdelfattah and Shane O'Connell and Andrew Bitar and David Han and Roberto Dicecco and Suchit Subhaschandra and Chris N Johnson and Dmitry Denisenko and Josh Fender and Gordon R. Chiu},
   booktitle={International Symposium on Highly-Efficient Accelerators and Reconfigurable Technologies},
@@ -325,7 +334,7 @@
   pdf={/assets/pdf/heart18.pdf},
 }
 
-@inproceedings{37,
+@inproceedings{38,
   title={Flexibility: FPGAs and CAD in Deep Learning Acceleration},
   author={Gordon R. Chiu and Andrew C. Ling and Davor Capalija and Andrew Bitar and Mohamed S. Abdelfattah},
   booktitle={International Symposium on Physical Design},
@@ -334,7 +343,7 @@
   pdf={/assets/pdf/ispd18.pdf},
 }
 
-@article{38,
+@article{39,
   title={Design and applications for embedded networks-on-chip on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
   journal={IEEE Transactions on Computers},
@@ -343,7 +352,7 @@
   pdf={/assets/pdf/tcomp16.pdf},
 }
 
-@inproceedings{40,
+@inproceedings{41,
   title={LYNX: CAD for FPGA-based networks-on-chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -353,7 +362,7 @@
   award={Nominated for the Michel Servit best paper award.},
 }
 
-@inproceedings{41,
+@inproceedings{42,
   title={Bringing programmability to the data plane: Packet processing with a NoC-enhanced FPGA},
   author={Andrew Bitar and Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Technology},
@@ -362,7 +371,7 @@
   pdf={/assets/pdf/fpt15.pdf},
 }
 
-@inproceedings{42,
+@inproceedings{43,
   title={Design and simulation tools for Embedded NOCs on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Ange Yaghi and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -371,7 +380,7 @@
   pdf={/assets/pdf/fpl15.pdf},
 }
 
-@inproceedings{44,
+@inproceedings{45,
   title={Take the highway: Design for embedded NoCs on FPGAs},
   author={Mohamed S. Abdelfattah and Andrew Bitar and Vaughn Betz},
   booktitle={International Symposium on Field-Programmable Gate Arrays},
@@ -381,7 +390,7 @@
   award={Best Paper Award},
 }
 
-@article{45,
+@article{46,
   title={Power analysis of embedded NoCs on FPGAs and comparison with custom buses},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={IEEE Transactions on Very Large-Scale Integration Systems},
@@ -390,7 +399,7 @@
   pdf={/assets/pdf/tvlsi15.pdf},
 }
 
-@article{47,
+@article{48,
   title={Networks-on-Chip for FPGAs: Hard, Soft or Mixed?},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={ACM Transactions on Reconfigurable Technology and Systems},
@@ -399,7 +408,7 @@
   pdf={/assets/pdf/trets14.pdf},
 }
 
-@inproceedings{48,
+@inproceedings{49,
   title={Gzip on a chip: High performance lossless data compression on fpgas using opencl},
   author={Mohamed S. Abdelfattah and Andrei Hagiescu and Deshanand Singh},
   booktitle={International Workshop on OpenCL},
@@ -408,7 +417,7 @@
   pdf={/assets/pdf/iwocl14.pdf},
 }
 
-@article{49,
+@article{50,
   title={The Case for Embedded Networks-on-Chip on FPGAs},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   journal={IEEE Micro Magazine},
@@ -417,7 +426,7 @@
   pdf={/assets/pdf/micro14.pdf},
 }
 
-@inproceedings{50,
+@inproceedings{51,
   title={Augmenting FPGAs with Embedded Networks on Chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={Workshop on the Intersection of Computer Architecture and Reconfigurable Logic},
@@ -426,7 +435,7 @@
   pdf={/assets/pdf/carl13.pdf},
 }
 
-@inproceedings{51,
+@inproceedings{52,
   title={The Power of Communication: Energy-Efficient NoCs for FPGAs},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Logic and Applications},
@@ -437,7 +446,7 @@
   award2={Selected as one of the <a href=http://www.fpl2015.org/pdf/sig_papers.pdf>most significant papers</a> from the first 25 years of FPL.}
 }
 
-@inproceedings{52,
+@inproceedings{53,
   title={Design tradeoffs for hard and soft FPGA-based Networks-on-Chip},
   author={Mohamed S. Abdelfattah and Vaughn Betz},
   booktitle={International Conference on Field-Programmable Technology},
@@ -446,7 +455,7 @@
   pdf={/assets/pdf/fpt12.pdf},
 }
 
-@inproceedings{53,
+@inproceedings{54,
   title={Transparent Structural Online Test for Reconfigurable Systems},
   author={Mohamed S. Abdelfattah and Lars Bauer and Claus Braun and Michael E Imhof and Michael A Kochte and Hongyan Zhang and Jörg Henkel and Hans-Joachim Wunderlich},
   booktitle={International Symposium on On-Line Testing and Robust System Design},
@@ -455,7 +464,7 @@
   pdf={/assets/pdf/iolts12.pdf},
 }
 
-@inproceedings{54,
+@inproceedings{55,
   title={2.2 GHz LC VCO for RFID on a 0.5-μm digital gate-array designed for ultra-thin silicon substrates},
   author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim Burghartz},
   booktitle={German Microwave Conference},
@@ -464,7 +473,7 @@
   pdf={/assets/pdf/gemic11.pdf},
 }
 
-@inproceedings{56,
+@inproceedings{57,
   title={Design of a RF Transmitter for RFID Tags in a New Technology with Ultra Thin Silicon Substrates},
   author={Mohamed S. Abdelfattah and Damir Ferenci and Markus Grözing and Manfred Berroth and Cor Scherjon and Joachim N Burghartz},
   booktitle={Workshop on Circuit Design and Digital Signal Processing},
